# bugzilla-data

./: .gitignore  README.md  bz_data.py  requirements.txt  setup.cfg
bugzilla_data/: bz_data.py
conf/: query.yaml
