[metadata]
name = bugzilla-data
author = John Dupuy
author-email = jdupuy@redhat.com
summary = Tools for plotting and gathering information about Bugzillas
description-file = README.md
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Utilities
long-description-type = text/markdown
version = 0.0.1
keywords =
    setup
    distutils

[files]
packages =
    bugzilla_data

[flake8]
ignore = E128,E811,W503
max-line-length = 100

[options]
install_requires =
    aspy.yaml
    backcall
    cached-property
    certifi
    cfgv
    chardet
    cycler
    decorator
    identify
    idna
    importlib-metadata
    ipython
    ipython-genutils
    jedi
    kiwisolver
    matplotlib
    more-itertools
    nodeenv
    numpy
    parso
    pexpect
    pickleshare
    pre-commit
    prompt-toolkit
    ptyprocess
    Pygments
    pyparsing
    python-bugzilla
    python-dateutil
    PyYAML
    requests
    six
    toml
    traitlets
    urllib3
    virtualenv==16.7.5
    wcwidth
    zipp

setup_requires =
    setuptools_scm
    pbr
